test/visibility/rename/privateRename.good
privateRename.chpl:8: error: Bad identifier in rename, 'a' is private
